Bug 387320 - PSQL: invalid connection option "MYSQL_OPT_RECONNECT"
Summary: PSQL: invalid connection option "MYSQL_OPT_RECONNECT"
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: database (other bugs)
Version First Reported In: 4.8.1
Platform: Ubuntu Linux
: NOR crash
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-11-26 14:18 UTC by michael01
Modified: 2019-08-29 01:29 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.8.2,5.0.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description michael01 2017-11-26 14:18:07 UTC
Hi there

After having upgraded from 4.8.0 to 4.8.1 I can't open my postgres database anymore. The error I'm getting is 'invalid connection option "MYSQL_OPT_RECONNECT"'. Not knowing too much about the insides, this error makes sense to me. I guess it should not try to open a postgres DB passing a MySQL flag. 

The flag was introduced in this fix: https://github.com/KDE/kmymoney/commit/a0433f9cb0f4657ff195f3de37a7d4c1f385b444

Might have to check the driver before passing driver specific flags?
Comment 1 Ralf Habacker 2017-11-27 07:44:26 UTC
Git commit 6bae3116a92eaa1d9751c909fe582bfa20021f29 by Ralf Habacker.
Committed on 27/11/2017 at 07:43.
Pushed by habacker into branch '4.8'.

Fix 'PSQL: invalid connection option "MYSQL_OPT_RECONNECT"'

The mentioned option should only be applied to mysql databases.
FIXED-IN:4.8.2

M  +3    -1    kmymoney/mymoney/storage/mymoneystoragesql.cpp

https://commits.kde.org/kmymoney/6bae3116a92eaa1d9751c909fe582bfa20021f29
Comment 2 Thomas Baumgart 2017-11-27 08:49:17 UTC
Git commit 11e02c557bbdce32fa5d64a0595f55b3599a1752 by Thomas Baumgart.
Committed on 27/11/2017 at 08:48.
Pushed by tbaumgart into branch 'master'.

Fix 'PSQL: invalid connection option "MYSQL_OPT_RECONNECT"'

The mentioned option should only be applied to mysql databases.
FIXED-IN:4.8.2
(cherry picked from commit 6bae3116a92eaa1d9751c909fe582bfa20021f29)

M  +3    -1    kmymoney/mymoney/storage/mymoneystoragesql.cpp

https://commits.kde.org/kmymoney/11e02c557bbdce32fa5d64a0595f55b3599a1752