Fix 'PSQL: invalid connection option "MYSQL_OPT_RECONNECT"'

The mentioned option should only be applied to mysql databases.

BUG:387320
FIXED-IN:4.8.2