kmymoney/mymoney/storage/mymoneystoragesql.cpp
@@ -150,7 +150,9 @@ int MyMoneyStorageSql::open(const KUrl& url, int openMode, bool clear)
     setHostName(url.host());
     setUserName(url.user());
     setPassword(url.pass());
-    setConnectOptions("MYSQL_OPT_RECONNECT=1");
+    if (url.queryItem("driver").contains("QMYSQL")) {
+      setConnectOptions("MYSQL_OPT_RECONNECT=1");
+    }
     switch (openMode) {
       case QIODevice::ReadOnly:    // OpenDatabase menu entry (or open last file)
       case QIODevice::ReadWrite:   // Save menu entry with database open
